// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default render 1`] = `
<div
  className="src-shared-components-TopcoderHeader-___style__header___LwYWf"
  onMouseLeave={[Function]}
>
  <div
    className="src-shared-components-TopcoderHeader-___style__main-desktop-header___oqm_l"
  >
    <a
      className="src-shared-components-TopcoderHeader-___style__logo___2WLJ0"
      href="https://www.topcoder-dev.com"
    >
      <LogoTopcoderWithName
        height={53}
        viewBox="0 0 135 21"
        width={135}
        xmlns="http://www.w3.org/2000/svg"
      />
    </a>
    <ul
      className="src-shared-components-TopcoderHeader-___style__main-menu___1pz4L"
    >
      <li
        className="src-shared-components-TopcoderHeader-___style__main-menu-item___2KIu6"
        data-menu="Compete"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
      >
        Compete
      </li>
      <li
        className="src-shared-components-TopcoderHeader-___style__main-menu-item___2KIu6"
        data-menu="Learn"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
      >
        Learn
      </li>
      <li
        className="src-shared-components-TopcoderHeader-___style__main-menu-item___2KIu6"
        data-menu="Community"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
      >
        Community
      </li>
    </ul>
    <div
      className="src-shared-components-TopcoderHeader-___style__right-menu___34OkD"
    >
      <span
        className="src-shared-components-TopcoderHeader-___style__auth-align___29jCN"
      >
        <Auth
          column={false}
        />
      </span>
      <div
        className="src-shared-components-TopcoderHeader-___style__search-icon___3w5nA"
        data-menu="search"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
      >
        <MagnifyingGlass
          height="18"
          viewBox="0 0 18 18"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        />
      </div>
    </div>
  </div>
  <SubMenu
    closeMenu={[Function]}
    currentSubMenuTitle=""
    menu={null}
    trigger={null}
  />
  <div
    className="src-shared-components-TopcoderHeader-___style__search-field___2VMzu"
    onMouseLeave={[Function]}
  >
    <input
      onKeyPress={[Function]}
      placeholder="Find members by username or skill"
    />
  </div>
  <Header
    close={[Function]}
    mainMenu={
      Array [
        Object {
          "items": Array [
            Object {
              "icon": <IconNavRocket
                height="32"
                viewBox="0 0 32 32"
                width="32"
                xmlns="http://www.w3.org/2000/svg"
              />,
              "link": "/challenges",
              "title": "All Challenges",
            },
            Object {
              "icon": <IconNavCP
                height="32"
                viewBox="0 0 32 32"
                width="32"
                xmlns="http://www.w3.org/2000/svg"
              />,
              "link": "https://arena.topcoder-dev.com",
              "title": "Competitive Programming",
            },
          ],
          "title": "Compete",
        },
        Object {
          "items": Array [
            Object {
              "enforceA": true,
              "icon": <IconNavBookDesign
                height="32"
                viewBox="0 0 32 32"
                width="32"
                xmlns="http://www.w3.org/2000/svg"
              />,
              "link": "https://www.topcoder-dev.com/community/design",
              "title": "Design",
            },
            Object {
              "enforceA": true,
              "icon": <IconNavBoolDevelop
                height="32"
                viewBox="0 0 32 32"
                width="32"
                xmlns="http://www.w3.org/2000/svg"
              />,
              "link": "https://www.topcoder-dev.com/community/development",
              "title": "Development",
            },
            Object {
              "enforceA": true,
              "icon": <IconNavBookData
                height="32"
                viewBox="0 0 32 32"
                width="32"
                xmlns="http://www.w3.org/2000/svg"
              />,
              "link": "https://www.topcoder-dev.com/community/data-science/",
              "title": "Data Science",
            },
            Object {
              "enforceA": true,
              "icon": <IconNavBookCP
                height="32"
                viewBox="0 0 32 32"
                width="32"
                xmlns="http://www.w3.org/2000/svg"
              />,
              "link": "https://www.topcoder-dev.com/community/competitive-programming",
              "title": "Competitive Programming",
            },
          ],
          "title": "Learn",
        },
        Object {
          "items": Array [
            Object {
              "enforceA": true,
              "icon": <IconNavTcoGeneric
                height="32"
                viewBox="0 0 32 32"
                width="32"
                xmlns="http://www.w3.org/2000/svg"
              />,
              "link": "https://www.topcoder.com/tco",
              "title": "TCO",
            },
            Object {
              "enforceA": true,
              "icon": <IconNavPrograms
                height="32"
                viewBox="0 0 32 32"
                width="32"
                xmlns="http://www.w3.org/2000/svg"
              />,
              "link": "https://www.topcoder-dev.com/community/member-programs",
              "title": "Programs",
            },
            Object {
              "icon": <IconNavForums
                height="32"
                viewBox="0 0 32 32"
                width="32"
                xmlns="http://www.w3.org/2000/svg"
              />,
              "link": "https://apps.topcoder-dev.com/forums",
              "title": "Forums",
            },
            Object {
              "enforceA": true,
              "icon": <IconNavStatistics
                height="32"
                viewBox="0 0 32 32"
                width="32"
                xmlns="http://www.w3.org/2000/svg"
              />,
              "link": "https://www.topcoder-dev.com/community/statistics",
              "title": "Statistics",
            },
            Object {
              "enforceA": true,
              "icon": <IconNavEvents
                height="32"
                viewBox="0 0 32 32"
                width="32"
                xmlns="http://www.w3.org/2000/svg"
              />,
              "link": "https://www.topcoder-dev.com/community/events",
              "title": "Events",
            },
            Object {
              "enforceA": true,
              "icon": <IconNavBlog
                height="32"
                viewBox="0 0 32 32"
                width="32"
                xmlns="http://www.w3.org/2000/svg"
              />,
              "link": "https://www.topcoder-dev.com/blog",
              "title": "Blog",
            },
          ],
          "title": "Community",
        },
      ]
    }
    open={[Function]}
    opened={false}
    profile={null}
    userMenu={null}
  />
</div>
`;

exports[`Render with open menu 1`] = `
<div
  className="src-shared-components-TopcoderHeader-___style__header___LwYWf"
  onMouseLeave={[Function]}
>
  <div
    className="src-shared-components-TopcoderHeader-___style__main-desktop-header___oqm_l"
  >
    <a
      className="src-shared-components-TopcoderHeader-___style__logo___2WLJ0"
      href="https://www.topcoder-dev.com"
    >
      <LogoTopcoderWithName
        height={53}
        viewBox="0 0 135 21"
        width={135}
        xmlns="http://www.w3.org/2000/svg"
      />
    </a>
    <ul
      className="src-shared-components-TopcoderHeader-___style__main-menu___1pz4L"
    >
      <li
        className="src-shared-components-TopcoderHeader-___style__main-menu-item___2KIu6 src-shared-components-TopcoderHeader-___style__opened___1WPVI src-shared-components-TopcoderHeader-___style__current___1Hk7o"
        data-menu="Compete"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
      >
        Compete
      </li>
      <li
        className="src-shared-components-TopcoderHeader-___style__main-menu-item___2KIu6"
        data-menu="Learn"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
      >
        Learn
      </li>
      <li
        className="src-shared-components-TopcoderHeader-___style__main-menu-item___2KIu6"
        data-menu="Community"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
      >
        Community
      </li>
    </ul>
    <div
      className="src-shared-components-TopcoderHeader-___style__right-menu___34OkD"
    >
      <span
        className="src-shared-components-TopcoderHeader-___style__auth-align___29jCN"
      >
        <Auth
          column={false}
        />
      </span>
      <div
        className="src-shared-components-TopcoderHeader-___style__search-icon___3w5nA"
        data-menu="search"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
      >
        <MagnifyingGlass
          height="18"
          viewBox="0 0 18 18"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        />
      </div>
    </div>
  </div>
  <SubMenu
    closeMenu={[Function]}
    currentSubMenuTitle="All Challenges"
    menu={
      Object {
        "items": Array [
          Object {
            "icon": <div />,
            "link": "/link",
            "title": "Title",
          },
        ],
        "title": "Compete",
      }
    }
    trigger={null}
  />
  <div
    className="src-shared-components-TopcoderHeader-___style__search-field___2VMzu"
    onMouseLeave={[Function]}
  >
    <input
      onKeyPress={[Function]}
      placeholder="Find members by username or skill"
    />
  </div>
  <Header
    close={[Function]}
    mainMenu={
      Array [
        Object {
          "items": Array [
            Object {
              "icon": <IconNavRocket
                height="32"
                viewBox="0 0 32 32"
                width="32"
                xmlns="http://www.w3.org/2000/svg"
              />,
              "link": "/challenges",
              "title": "All Challenges",
            },
            Object {
              "icon": <IconNavCP
                height="32"
                viewBox="0 0 32 32"
                width="32"
                xmlns="http://www.w3.org/2000/svg"
              />,
              "link": "https://arena.topcoder-dev.com",
              "title": "Competitive Programming",
            },
          ],
          "title": "Compete",
        },
        Object {
          "items": Array [
            Object {
              "enforceA": true,
              "icon": <IconNavBookDesign
                height="32"
                viewBox="0 0 32 32"
                width="32"
                xmlns="http://www.w3.org/2000/svg"
              />,
              "link": "https://www.topcoder-dev.com/community/design",
              "title": "Design",
            },
            Object {
              "enforceA": true,
              "icon": <IconNavBoolDevelop
                height="32"
                viewBox="0 0 32 32"
                width="32"
                xmlns="http://www.w3.org/2000/svg"
              />,
              "link": "https://www.topcoder-dev.com/community/development",
              "title": "Development",
            },
            Object {
              "enforceA": true,
              "icon": <IconNavBookData
                height="32"
                viewBox="0 0 32 32"
                width="32"
                xmlns="http://www.w3.org/2000/svg"
              />,
              "link": "https://www.topcoder-dev.com/community/data-science/",
              "title": "Data Science",
            },
            Object {
              "enforceA": true,
              "icon": <IconNavBookCP
                height="32"
                viewBox="0 0 32 32"
                width="32"
                xmlns="http://www.w3.org/2000/svg"
              />,
              "link": "https://www.topcoder-dev.com/community/competitive-programming",
              "title": "Competitive Programming",
            },
          ],
          "title": "Learn",
        },
        Object {
          "items": Array [
            Object {
              "enforceA": true,
              "icon": <IconNavTcoGeneric
                height="32"
                viewBox="0 0 32 32"
                width="32"
                xmlns="http://www.w3.org/2000/svg"
              />,
              "link": "https://www.topcoder.com/tco",
              "title": "TCO",
            },
            Object {
              "enforceA": true,
              "icon": <IconNavPrograms
                height="32"
                viewBox="0 0 32 32"
                width="32"
                xmlns="http://www.w3.org/2000/svg"
              />,
              "link": "https://www.topcoder-dev.com/community/member-programs",
              "title": "Programs",
            },
            Object {
              "icon": <IconNavForums
                height="32"
                viewBox="0 0 32 32"
                width="32"
                xmlns="http://www.w3.org/2000/svg"
              />,
              "link": "https://apps.topcoder-dev.com/forums",
              "title": "Forums",
            },
            Object {
              "enforceA": true,
              "icon": <IconNavStatistics
                height="32"
                viewBox="0 0 32 32"
                width="32"
                xmlns="http://www.w3.org/2000/svg"
              />,
              "link": "https://www.topcoder-dev.com/community/statistics",
              "title": "Statistics",
            },
            Object {
              "enforceA": true,
              "icon": <IconNavEvents
                height="32"
                viewBox="0 0 32 32"
                width="32"
                xmlns="http://www.w3.org/2000/svg"
              />,
              "link": "https://www.topcoder-dev.com/community/events",
              "title": "Events",
            },
            Object {
              "enforceA": true,
              "icon": <IconNavBlog
                height="32"
                viewBox="0 0 32 32"
                width="32"
                xmlns="http://www.w3.org/2000/svg"
              />,
              "link": "https://www.topcoder-dev.com/blog",
              "title": "Blog",
            },
          ],
          "title": "Community",
        },
      ]
    }
    open={[Function]}
    opened={false}
    profile={null}
    userMenu={null}
  />
</div>
`;

exports[`Render with specified profile 1`] = `
<div
  className="src-shared-components-TopcoderHeader-___style__header___LwYWf"
  onMouseLeave={[Function]}
>
  <div
    className="src-shared-components-TopcoderHeader-___style__main-desktop-header___oqm_l"
  >
    <a
      className="src-shared-components-TopcoderHeader-___style__logo___2WLJ0"
      href="https://www.topcoder-dev.com"
    >
      <LogoTopcoderWithName
        height={53}
        viewBox="0 0 135 21"
        width={135}
        xmlns="http://www.w3.org/2000/svg"
      />
    </a>
    <ul
      className="src-shared-components-TopcoderHeader-___style__main-menu___1pz4L"
    >
      <li
        className="src-shared-components-TopcoderHeader-___style__main-menu-item___2KIu6"
        data-menu="Compete"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
      >
        Compete
      </li>
      <li
        className="src-shared-components-TopcoderHeader-___style__main-menu-item___2KIu6"
        data-menu="Learn"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
      >
        Learn
      </li>
      <li
        className="src-shared-components-TopcoderHeader-___style__main-menu-item___2KIu6"
        data-menu="Community"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
      >
        Community
      </li>
    </ul>
    <div
      className="src-shared-components-TopcoderHeader-___style__right-menu___34OkD"
    >
      <div
        className="src-shared-components-TopcoderHeader-___style__user-menu___3CMgb"
        data-menu="userMenu"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
      >
        <div
          className="src-shared-components-TopcoderHeader-___style__user-menu-handle___r6kbg"
          style={
            Object {
              "color": "#9D9FA0",
            }
          }
        />
        <div
          className="src-shared-components-TopcoderHeader-___style__avatar___3BqbY"
        >
          <ThemedAvatar
            composeAdhocTheme="deeply"
            composeContextTheme="softly"
            mapThemrProps={[Function]}
            themePriority="adhoc-context-default"
          />
        </div>
      </div>
      <div
        className="opened src-shared-components-TopcoderHeader-___style__search-icon___3w5nA"
        data-menu="search"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
      >
        <MagnifyingGlass
          height="18"
          viewBox="0 0 18 18"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        />
      </div>
    </div>
  </div>
  <SubMenu
    closeMenu={[Function]}
    currentSubMenuTitle=""
    menu={null}
    trigger={null}
  />
  <div
    className="opened src-shared-components-TopcoderHeader-___style__search-field___2VMzu"
    onMouseLeave={[Function]}
  >
    <input
      onKeyPress={[Function]}
      placeholder="Find members by username or skill"
    />
  </div>
  <Header
    close={[Function]}
    mainMenu={
      Array [
        Object {
          "items": Array [
            Object {
              "icon": <IconNavRocket
                height="32"
                viewBox="0 0 32 32"
                width="32"
                xmlns="http://www.w3.org/2000/svg"
              />,
              "link": "/challenges",
              "title": "All Challenges",
            },
            Object {
              "icon": <IconNavCP
                height="32"
                viewBox="0 0 32 32"
                width="32"
                xmlns="http://www.w3.org/2000/svg"
              />,
              "link": "https://arena.topcoder-dev.com",
              "title": "Competitive Programming",
            },
          ],
          "title": "Compete",
        },
        Object {
          "items": Array [
            Object {
              "enforceA": true,
              "icon": <IconNavBookDesign
                height="32"
                viewBox="0 0 32 32"
                width="32"
                xmlns="http://www.w3.org/2000/svg"
              />,
              "link": "https://www.topcoder-dev.com/community/design",
              "title": "Design",
            },
            Object {
              "enforceA": true,
              "icon": <IconNavBoolDevelop
                height="32"
                viewBox="0 0 32 32"
                width="32"
                xmlns="http://www.w3.org/2000/svg"
              />,
              "link": "https://www.topcoder-dev.com/community/development",
              "title": "Development",
            },
            Object {
              "enforceA": true,
              "icon": <IconNavBookData
                height="32"
                viewBox="0 0 32 32"
                width="32"
                xmlns="http://www.w3.org/2000/svg"
              />,
              "link": "https://www.topcoder-dev.com/community/data-science/",
              "title": "Data Science",
            },
            Object {
              "enforceA": true,
              "icon": <IconNavBookCP
                height="32"
                viewBox="0 0 32 32"
                width="32"
                xmlns="http://www.w3.org/2000/svg"
              />,
              "link": "https://www.topcoder-dev.com/community/competitive-programming",
              "title": "Competitive Programming",
            },
          ],
          "title": "Learn",
        },
        Object {
          "items": Array [
            Object {
              "enforceA": true,
              "icon": <IconNavTcoGeneric
                height="32"
                viewBox="0 0 32 32"
                width="32"
                xmlns="http://www.w3.org/2000/svg"
              />,
              "link": "https://www.topcoder.com/tco",
              "title": "TCO",
            },
            Object {
              "enforceA": true,
              "icon": <IconNavPrograms
                height="32"
                viewBox="0 0 32 32"
                width="32"
                xmlns="http://www.w3.org/2000/svg"
              />,
              "link": "https://www.topcoder-dev.com/community/member-programs",
              "title": "Programs",
            },
            Object {
              "icon": <IconNavForums
                height="32"
                viewBox="0 0 32 32"
                width="32"
                xmlns="http://www.w3.org/2000/svg"
              />,
              "link": "https://apps.topcoder-dev.com/forums",
              "title": "Forums",
            },
            Object {
              "enforceA": true,
              "icon": <IconNavStatistics
                height="32"
                viewBox="0 0 32 32"
                width="32"
                xmlns="http://www.w3.org/2000/svg"
              />,
              "link": "https://www.topcoder-dev.com/community/statistics",
              "title": "Statistics",
            },
            Object {
              "enforceA": true,
              "icon": <IconNavEvents
                height="32"
                viewBox="0 0 32 32"
                width="32"
                xmlns="http://www.w3.org/2000/svg"
              />,
              "link": "https://www.topcoder-dev.com/community/events",
              "title": "Events",
            },
            Object {
              "enforceA": true,
              "icon": <IconNavBlog
                height="32"
                viewBox="0 0 32 32"
                width="32"
                xmlns="http://www.w3.org/2000/svg"
              />,
              "link": "https://www.topcoder-dev.com/blog",
              "title": "Blog",
            },
          ],
          "title": "Community",
        },
      ]
    }
    open={[Function]}
    opened={false}
    profile={Object {}}
    userMenu={
      Object {
        "items": Array [
          Object {
            "enforceA": true,
            "icon": <IconNavDashboard
              height="32"
              viewBox="0 0 32 32"
              width="32"
              xmlns="http://www.w3.org/2000/svg"
            />,
            "link": "https://www.topcoder-dev.com/my-dashboard",
            "title": "Dashboard",
          },
          Object {
            "enforceA": true,
            "icon": <IconNavProfile
              height="32"
              viewBox="0 0 32 32"
              width="32"
              xmlns="http://www.w3.org/2000/svg"
            />,
            "link": "https://www.topcoder-dev.com/members/undefined",
            "title": "My Profile",
          },
          Object {
            "icon": <IconNavWallet
              height="32"
              viewBox="0 0 32 32"
              width="32"
              xmlns="http://www.w3.org/2000/svg"
            />,
            "link": "https://community.topcoder-dev.com/PactsMemberServlet?module=PaymentHistory&full_list=false",
            "title": "Payments",
          },
          Object {
            "enforceA": true,
            "icon": <IconNavSettings
              height="32"
              viewBox="0 0 32 32"
              width="32"
              xmlns="http://www.w3.org/2000/svg"
            />,
            "link": "https://www.topcoder-dev.com/settings/profile",
            "title": "Settings",
          },
          Object {
            "enforceA": true,
            "icon": <IconNavExit
              height="32"
              viewBox="0 0 32 32"
              width="32"
              xmlns="http://www.w3.org/2000/svg"
            />,
            "link": "https://www.topcoder-dev.com/logout",
            "title": "Log Out",
          },
        ],
        "title": "User",
      }
    }
  />
</div>
`;
